db_k8s/2.2_db_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-app-jf-new
  name: todo-svc-jf-new
  namespace: todo-app-jf-new
spec:
  type: NodePort
  ports:
  - name: todo-svc-jf-new
    port: 3000
    targetPort: 3000
    nodePort: 
  selector:
    app: todo-app-jf-new
